k8s/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: auralis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: asia-south1-docker.pkg.dev/project-2d37241a-3276-4c0d-b31/auralis/ui:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: auralis
spec:
  selector:
    app: ui
  ports:
  - port: 80
    targetPort: 80
